Entropy special issue

--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@ a:active {
 				<table bgcolor="#FFFAFA" width="100%" style="padding: 5px">
 					<tr>
 					<td>
-						<div style="text-align: left; padding-left: 55px; padding-top: 30px;">
+						<div style="text-align: left; padding-left: 80px; padding-top: 30px;">
 							<img src="Songze.png" width="240" height="320" alt="" />
 						</div>
 						<br>
 
-						<div style="font-size: 100%; text-align: left; padding-left: 40px; padding-bottom: 10px;">
+						<div style="font-size: 100%; text-align: left; padding-left: 80px; padding-bottom: 10px;">
 							<!-- <span style="font-size: 150%;">Contact Information:</span><br>&nbsp;<br> -->
 						<!--	Electrical Engineering Dept.<br>
 							University of Southern California<br>
@@ -151,20 +151,20 @@ a:active {
 <hr>
 
 <tr>
-	<td width="1000" valign="top" style="padding-left: 15px;">
+	<td align="justify" width="1000" valign="top" style="padding-left: 80px; padding-right: 200px">
 		<strong>
 			<!-- <p style="font-size:18px; color:red">I am joining the Hong Kong University of Science and Technology as an assistant professor starting Dec. 2020. </p> -->
 
-		   <p style="font-size:18px; color:red">Positions are open for <em style="color:black">strongly motivated</em> postgraduate students (MPhil and PhD), RAs, postdocs, and visiting interns, on research topics including distributed/federated learning, secure multiparty computation, and blockchain protocls and systems.
+		   <p style="font-size:18px; color:red">Positions are open for <em style="color:black">strongly motivated</em> postgraduate students (MPhil and PhD), RAs, postdocs, and visiting interns, on research topics including distributed/federated learning, privacy-preserving and trustworthy machine learning, secure multiparty computation, and blockchain scalability.
 
 			 <p style="font-size:18px; color:red">
-			 Interested applicants please email me with your CV, transcript, and any related publications at songzeli [at] ust [dot] hk. Past experience on publishing (as first author) on top machine learning, computer/communciation security, and information theory venues or journals is a big plus! </p>
+			 Interested applicants please email me with your CV, transcript, and any related publications at songzeli [at] ust [dot] hk. Past experience on publishing (as first author) on top machine learning, computer/communciation security, cryptography, and information theory venues is a big plus! </p>
 		</strong>
 	</td>
 </tr>
 
 <tr>
-	<td width="1000" valign="top" style="padding-left: 15px;">
+	<td align="justify" width="1000" valign="top" style="padding-left: 80px; padding-right: 200px">
 				<!-- <div style="vertical-align: text-top; font-size: 100%">	 -->
 				<!-- <h2> About Me </h2> -->
 				<!-- <p>I am an assistant professor with the Thrust of Internet of Things at the Hong Kong University of Science and Technology(Guangzhou), and I am also an affiliate assistant professor with the Department of Computer Science and Engineering at HKUST(Clear Water Bay). I spent two years working as a blockchain researcher at Applied Protocol Research and Stanford University. I received my PhD degree in Electrical Engineering from University of Southern California, and my BSc degree in Electrical Engineering from New York University.
@@ -185,12 +185,16 @@ a:active {
 				<h2> Research Interests </h2>
 				<ul>
   				<li>Federated learning</li><br>
-  				<li>Privacy-preserving and trustworthy computing and learning </li><br>
-					<li>Blockchain protocols and systems</li>
+  				<li>Privacy-preserving and trustworthy machine learning </li><br>
+					<li>Secure multi-party computation and threshold cryptosystems</li><br>
+					<li>Blockchain scalability</li>
 				</ul>
 
 				<h2> News </h2>
 				<ul>
+
+				<li>[Aug. 12, 2022] I am guest editing a <a href="https://www.mdpi.com/journal/entropy/special_issues/LDDN6A28B1">special issue on Information Theory for Distributed Systems with Entropy</a>. We look forward to receiving your great research works on coding for distributed storage systems, coded caching networks, coded distributed computation, distributed and federated learning systems, distributed private information and function retrieval, distributed ledgers/blockchains, and secure multi-party computation and verifiable computation.
+				</li><br>
 
 				<li>[June 3, 2022] Our paper "<a href="https://arxiv.org/abs/2201.00646">A Systematic Approach towards Efficient Private Matrix Multiplication</a>" is accepted to the Special Issue on Distributed Coding and Computation in the IEEE Journal on Selected Areas in Information Theory (JSAIT)!
 				</li><br>
