--- a/services.html
+++ b/services.html
@@ -102,6 +102,13 @@ a:active {
 	<td>
 		<div style="padding: 10px">
       <h1>Academic services</h1>
+      <h2>Guest editor</h2>
+			<ul>
+				<li>
+					<a href="https://www.mdpi.com/journal/entropy/special_issues/LDDN6A28B1">Entropy, special issue on Information Theory for Distributed Systems.</a>
+				</li>
+			</ul>
+
 			<h2>TPC member</h2>
 			<ul>
 				<li>
