--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ a:active {
 		<strong>
 			<!-- <p style="font-size:18px; color:red">I am joining the Hong Kong University of Science and Technology as an assistant professor starting Dec. 2020. </p> -->
 
-		   <p style="font-size:18px; color:red">Positions are open for <em style="color:black">strongly motivated</em> postgraduate students (MPhil and PhD), RAs, postdocs, and visiting interns, on research topics including distributed/federated learning, privacy-preserving and trustworthy machine learning, secure multiparty computation, and blockchain security and scalability.
+		   <p style="font-size:18px; color:red">Positions are open for <em style="color:black">strongly motivated</em> postgraduate students (MPhil and PhD), RAs, postdocs, and visiting interns, on research topics including privacy-preserving and trustworthy machine learning, secure multiparty computation, and blockchain security and scalability.
 
 			 <p style="font-size:18px; color:red">
 			 Interested applicants please email me with your CV, transcript, and any related publications at songzeli [at] ust [dot] hk. Past experience on publishing (as first author) on top machine learning, computer/communciation security, cryptography, and information theory venues is a big plus! </p>
@@ -184,7 +184,7 @@ a:active {
 
 				<h2> Research Interests </h2>
 				<ul>
-  				<li>Federated learning</li><br>
+  				<!-- <li>Federated learning</li><br> -->
   				<li>Privacy-preserving and trustworthy machine learning </li><br>
 					<li>Secure multi-party computation and threshold cryptosystems</li><br>
 					<li>Blockchain security and scalability</li>
