--- a/teaching.html
+++ b/teaching.html
@@ -112,7 +112,7 @@ a:active {
 					<!-- IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021 -->
 				</li>
 				<li>
-					IOTA 6101: Internet of Things Seminar I <a href="taught_courses/HKUST/IOTA-6101-6102-Fall-2021.html"> [Fall 2021]</a> <a href="taught_courses/HKUST/IOTA-6101-6102-Spring-2022.html"> [Spring 2022]</a>
+					IOTA 6101: Internet of Things Seminar I <a href="taught_courses/HKUST/IOTA-6101-6102-Fall-2021.html"> [Fall 2021]</a> <a href="taught_courses/HKUST/IOTA-6101-6102-Spring-2022.html"> [Spring 2022]</a> <a href="taught_courses/HKUST/IOTA-6101-Fall-2022.html"> [Fall 2022]</a>
 			  </li>
 				<li>
 					IOTA 6102: Internet of Things Seminar II <a href="taught_courses/HKUST/IOTA-6101-6102-Fall-2021.html"> [Fall 2021]</a> <a href="taught_courses/HKUST/IOTA-6101-6102-Spring-2022.html"> [Spring 2022]</a>
