Course information update

--- a/taught_courses/HKUST/IOTA-6910-Spring-2022.html
+++ b/taught_courses/HKUST/IOTA-6910-Spring-2022.html
@@ -109,7 +109,7 @@ a:active {
 <h3>Reference texts:</h3>
 <ol>
 <li> Jonathan Katz and Yehuda Lindell, Introduction to modern cryptography, 3rd Edition, 2020.</li>
-<li> Dan Boneh and Victor Shoup, A graduate course in applied cryptography, 2020. Available <a href="https://www.distributedconsensus.net" target="_blank">online</a>.</li>
+<li> Dan Boneh and Victor Shoup, A graduate course in applied cryptography, 2020. Available <a href="https://toc.cryptobook.us/book.pdf" target="_blank">online</a>.</li>
 <li>Ross Anderson, Security engineering: a guide to building dependable distributed systems. John Wiley & Sons, 2020.</li>
 <li>Thomas R. Peltier, Information security fundamentals. CRC press, 2013.
 </li>
