--- a/teaching.html
+++ b/teaching.html
@@ -104,7 +104,7 @@ a:active {
 			<h2>HKUST</h2>
 			<ul>
 				<li>
-					IOTA 5101: Fog/Edge/Cloud Computing for IoT <a href="taught_courses/HKUST/IOTA-5101-Spring-2021.html">  [Spring 2021]</a>  <a href="taught_courses/HKUST/IOTA-5101-Fall-2021.html">  [Fall 2021]</a>
+					IOTA 5101: Fog/Edge/Cloud Computing for IoT <a href="taught_courses/HKUST/IOTA-5101-Spring-2021.html">  [Spring 2021]</a>  <a href="taught_courses/HKUST/IOTA-5101-Fall-2021.html">  [Fall 2021]</a> <a href="taught_courses/HKUST/IOTA-5101-Fall-2022.html">  [Fall 2022]</a>
 					<!-- IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021 -->
 				</li>
 				<li>
