--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
+				<li>[Sept. 15, 2022] Our paper "<a href="">DReS-FL: Dropout-Resilient Secure Federated Learning for Non-IID Clients via Secret Data Sharing</a>" is accepted to NeurIPS 2022!
+				</li><br>
+
 				<li>[Aug. 12, 2022] I am guest editing a <a href="https://www.mdpi.com/journal/entropy/special_issues/LDDN6A28B1">special issue on Information Theory for Distributed Systems with Entropy</a>. We look forward to receiving your great research works on coding for distributed storage systems, coded caching networks, coded distributed computation, distributed and federated learning systems, distributed private information and function retrieval, distributed ledgers/blockchains, and secure multi-party computation and verifiable computation.
 				</li><br>
 
