Add team members

--- a/team.html
+++ b/team.html
@@ -92,6 +92,7 @@ a:active {
 		<!-- | <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a> -->
 		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a>
 		| <a href="bio.html" class="menu">Bio</a>
+		| <a href="team.html" class="menu">Team</a>
 		|
 		<!--| <a href=“songze-Resume-Public.pdf" class="menu" target="_blank">Resume</a> |-->
 </div>
@@ -102,58 +103,70 @@ a:active {
 	<td>
 		<div style="padding: 10px">
       <h2>Current Team Members</h2>
-			<h3>Post-doc Fellows</h3>
-			<ul>
-				<li>
-          Dr. Jinbao Zhu
-				</li>
-			</ul>
 
       <h3>PhD Students</h3>
       <ul>
-        <li>
-          Sizai Hou (since 2021 fall)
+				<li>
+          <a href="mailto:cche861@connect.hkust-gz.edu.cn">Chujiang Che</a> (since 2022 fall)
         </li>
 
         <li>
-          Duanyi Yao (since 2021 fall)
+          <a href="mailto:jxie171@connect.hkust-gz.edu.cn">Jin Xie</a> (since 2022 fall)
         </li>
 
         <li>
-          Ao Li (since 2021 fall, co-supervised with Prof. Fugee Tsung)
+          <a href="mailto:ychang847@connect.hkust-gz.edu.cn">Yijia Chang</a> (since 2022 fall)
         </li>
 
-        <!-- <li>
-          Chujiang Che (since 2022 fall)
-        </li>
-
+				<li>
+					<a href="mailto:aliat@connect.ust.hk">Ao Li</a> (since 2021 fall, co-supervised with <a href="https://ieda.ust.hk/dfaculty/tsung/">Prof. Fugee Tsung</a>)
+				</li>
         <li>
-          Jin Xie (since 2022 fall)
+          <a href="mailto:dyao@connect.ust.hk">Duanyi Yao</a> (since 2021 fall)
         </li>
 
-        <li>
-          Yijia Chang (since 2022 fall)
-        </li> -->
+				<li>
+					<a href="mailto:shouac@connect.ust.hk">Sizai Hou</a> (since 2021 fall)
+				</li>
       </ul>
 
       <h3>MPhil Students</h3>
       <ul>
         <li>
-          Jiaxiang Tang (since 2021 fall)
+          <a href="mailto:jtangbe@connect.ust.hk">Jiaxiang Tang</a> (since 2021 fall)
         </li>
       </ul>
 
-      <h3>Research Assistants</h3>
+			<h3>Post-doc Fellows</h3>
+			<ul>
+				<li>
+					<a href="mailto:jbzhu@ust.hk">Dr. Jinbao Zhu</a>
+				</li>
+			</ul>
+
+      <!-- <h3>Research Assistants</h3>
       <ul>
         <li>
           Mingzhe Liu
         </li>
+      </ul> -->
 
+      <hr>
+			<h2>Former Team Members</h2>
+
+			<h3>Visiting Students</h3>
+			<ul>
+				<li>
+					Jiacheng Liang, 2021 spring, now pursing PhD at Penn State.
+				</li>
+			</ul>
+
+			<h3>Research Assistants</h3>
+      <ul>
         <li>
-          Jin Liu
+          Siyang Jiang, 2021 fall, now pursing PhD at CUHK.
         </li>
       </ul>
-
 
 		</div>
 	</td>
