Add team members

--- a/services.html
+++ b/services.html
@@ -92,6 +92,8 @@ a:active {
 		<!-- | <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a> -->
 		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a>
 		| <a href="bio.html" class="menu">Bio</a>
+		| <a href="team.html" class="menu">Team</a>
+		| <a href="team.html" class="menu">Team</a>
 		|
 		<!--| <a href=“songze-Resume-Public.pdf" class="menu" target="_blank">Resume</a> |-->
 </div>
