Swift+ JSAC update

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
-				<li>[Nov. 30, 2022] Our paper "<a href="https://arxiv.org/pdf/2203.13060.pdf">SwiftAgg+: Achieving Asymptotically Optimal Communication Loads in Secure Aggregation for Federated Learning</a>" is accepted for publication on <a href="https://www.comsoc.org/publications/journals/ieee-jsac/cfp/communication-efficient-distributed-learning-over-networks">JSAC 2022 special issue on communication-efficient distributed learning over networks</a>！
+				<li>[Nov. 30, 2022] Our paper "<a href="https://arxiv.org/pdf/2203.13060.pdf">SwiftAgg+: Achieving Asymptotically Optimal Communication Loads in Secure Aggregation for Federated Learning</a>" is accepted for publication on IEEE Journal on Selected Areas in Communications (JSAC) 2022 <a href="https://www.comsoc.org/publications/journals/ieee-jsac/cfp/communication-efficient-distributed-learning-over-networks">Special Issue on Communication-Efficient Distributed Learning over Networks</a>！
 				</li><br>
 
 				<li>[Sept. 15, 2022] Our paper "<a href="https://arxiv.org/pdf/2210.02680.pdf">DReS-FL: Dropout-Resilient Secure Federated Learning for Non-IID Clients via Secret Data Sharing</a>" is accepted to NeurIPS 2022!
