Change Team information

--- a/team.html
+++ b/team.html
@@ -137,12 +137,12 @@ a:active {
         </li>
       </ul>
 
-			<h3>Post-doc Fellows</h3>
+			<!-- <h3>Post-doc Fellows</h3>
 			<ul>
 				<li>
 					<a href="mailto:jbzhu@ust.hk">Dr. Jinbao Zhu</a>
 				</li>
-			</ul>
+			</ul> -->
 
       <!-- <h3>Research Assistants</h3>
       <ul>
