Update student name

--- a/team.html
+++ b/team.html
@@ -107,7 +107,7 @@ a:active {
       <h3>PhD Students</h3>
       <ul>
 				<li>
-          <a href="mailto:cche861@connect.hkust-gz.edu.cn">Chujiang Che</a> (since 2022 fall)
+          <a href="mailto:cche861@connect.hkust-gz.edu.cn">Chunjiang Che</a> (since 2022 fall)
         </li>
 
         <li>
