research interest update

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ a:active {
 				<h2> Research Interests </h2>
 				<ul>
   				<!-- <li>Federated learning</li><br> -->
-  				<li>AI security </li><br>
+  				<li>AI security and privacy</li><br>
 					<li>Secure multi-party computation </li><br>
 					<li>Blockchain security and scalability</li>
 				</ul>
