--- a/teaching.html
+++ b/teaching.html
@@ -109,6 +109,10 @@ a:active {
 					<!-- IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021 -->
 				</li>
 				<li>
+					IOTA 5503: Systems Security and Privacy: Theory and Applications<a href="taught_courses/HKUST/IOTA-5503-Spring-2023.html">  [Spring 2023]</a>  
+					<!-- IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021 -->
+				</li>
+				<li>
 					IOTA 6910A: Security in IoT Systems: Theory and Applications <a href="taught_courses/HKUST/IOTA-6910-Spring-2022.html">  [Spring 2022]</a>
 					<!-- IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021 -->
 				</li>
