--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
+				<li>[Feb. 16, 2023] Our paper "<a href="https://arxiv.org/abs/2205.01505">Information-Theoretically Private Matrix Multiplication From MDS-Coded Storage</a>" is accepted for publication on IEEE Transactions on Information Forensics & Security！
+				</li><br>
+
 				<li>[Nov. 30, 2022] Our paper "<a href="https://arxiv.org/pdf/2203.13060.pdf">SwiftAgg+: Achieving Asymptotically Optimal Communication Loads in Secure Aggregation for Federated Learning</a>" is accepted for publication on IEEE Journal on Selected Areas in Communications (JSAC) 2022 <a href="https://www.comsoc.org/publications/journals/ieee-jsac/cfp/communication-efficient-distributed-learning-over-networks">Special Issue on Communication-Efficient Distributed Learning over Networks</a>！
 				</li><br>
 
