--- a/services.html
+++ b/services.html
@@ -107,12 +107,18 @@ a:active {
       <h2>Guest editor</h2>
 			<ul>
 				<li>
+					<a href="https://jsssjournal.com/journal/special_detail/1367">Journal of Surveillance, Security and Safety, special issue on AI Security and Privacy.</a>
+				</li>
+				<li>
 					<a href="https://www.mdpi.com/journal/entropy/special_issues/LDDN6A28B1">Entropy, special issue on Information Theory for Distributed Systems.</a>
 				</li>
 			</ul>
 
 			<h2>TPC member</h2>
 			<ul>
+				<li>
+					NeurIPS 2022 International Workshop on Federated Learning: Recent Advances and New Challenges (FL-NeurIPS'22)
+				</li>
 				<li>
 					International Conference on Wireless Communications and Signal Processing (WCSP-22)
 				</li>
