ITW paper accept

--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
+				<li>[Feb. 25, 2023] Our paper "<a href="https://arxiv.org/pdf/2212.08236.pdf">Coded Distributed Computing for Hierarchical Multi-Task Learning</a>" is accepted to IEEE Information Theory Workshop (ITW) 2023!
+				</li><br>
+
 				<li>[Feb. 16, 2023] Our paper "<a href="https://arxiv.org/abs/2205.01505">Information-Theoretically Private Matrix Multiplication From MDS-Coded Storage</a>" is accepted for publication on IEEE Transactions on Information Forensics & Security！
 				</li><br>
 
