--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ a:active {
 		<strong>
 			<!-- <p style="font-size:18px; color:red">I am joining the Hong Kong University of Science and Technology as an assistant professor starting Dec. 2020. </p> -->
 
-		   <p style="font-size:18px; color:red">Positions are open for <em style="color:black">strongly motivated</em> postgraduate students (MPhil and PhD), RAs, postdocs, and visiting interns, on research topics including federated learning privacy and security, homomorphic secret sharing, threshold cryptosystems, and blockchain layer-1 and layer-2 scalability.
+		   <p style="font-size:18px; color:red">Positions are open for <em style="color:black">strongly motivated</em> postgraduate students (MPhil and PhD), post-docs, research assistants, and visiting interns, on research topics including federated learning algorithms, security, and privacy, secure multiparty computation (e.g., threshold cryptosystems and secure ML protocols), and blockchain security and scalability (e.g., sharding and rollups).
 
 			 <p style="font-size:18px; color:red">
 			 Interested applicants please email me with your CV, transcript, and any related publications at songzeli [at] ust [dot] hk. Past experience on publishing (as first author) on top machine learning, computer/communciation security, cryptography, and information theory venues is a big plus! </p>
