--- a/services.html
+++ b/services.html
@@ -104,20 +104,31 @@ a:active {
 	<td>
 		<div style="padding: 10px">
       <h1>Academic services</h1>
+			
       <h2>Guest editor</h2>
 			<ul>
 				<li>
-					<a href="https://jsssjournal.com/journal/special_detail/1367">Journal of Surveillance, Security and Safety, special issue on AI Security and Privacy.</a>
+					<a href="https://jsssjournal.com/journal/special_detail/1367">Journal of Surveillance, Security and Safety, special issue on AI Security and Privacy</a>
 				</li>
 				<li>
-					<a href="https://www.mdpi.com/journal/entropy/special_issues/LDDN6A28B1">Entropy, special issue on Information Theory for Distributed Systems.</a>
+					<a href="https://www.mdpi.com/journal/entropy/special_issues/LDDN6A28B1">Entropy, special issue on Information Theory for Distributed Systems</a>
+				</li>
+			</ul>
+
+			<h2>Area chair</h2>
+			<ul>
+				<li>
+					<a href="https://mlsys2023-rclwn.github.io/">MLSys 2023 Workshop on Resource-Constrained Learning in Wireless Networks (MLSys-RCLWN-23)</a>
 				</li>
 			</ul>
 
 			<h2>TPC member</h2>
 			<ul>
 				<li>
-					NeurIPS 2022 International Workshop on Federated Learning: Recent Advances and New Challenges (FL-NeurIPS'22)
+					IJCAI International Workshop on Trustworthy Federated Learning (FL-IJCAI-23)
+				</li>
+				<li>
+					NeurIPS 2022 International Workshop on Federated Learning: Recent Advances and New Challenges (FL-NeurIPS-22)
 				</li>
 				<li>
 					International Conference on Wireless Communications and Signal Processing (WCSP-22)
