--- a/services.html
+++ b/services.html
@@ -104,7 +104,7 @@ a:active {
 	<td>
 		<div style="padding: 10px">
       <h1>Academic services</h1>
-			
+
       <h2>Guest editor</h2>
 			<ul>
 				<li>
@@ -124,6 +124,9 @@ a:active {
 
 			<h2>TPC member</h2>
 			<ul>
+				<li>
+					SIGIR 2023 1st Workshop on Federated Learning for Information Retrieval (FLIRT@SIGIR 2023)
+				</li>
 				<li>
 					IJCAI International Workshop on Trustworthy Federated Learning (FL-IJCAI-23)
 				</li>
