--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@ a:active {
 				<strong style="font-size: 160%";> Songze Li</strong><br><br><br><br>
 
 				Assistant Professor <br><br>
-				<a href="https://hkust-gz.edu.cn/academics/four-hubs/information-hub/internet-of-things">Thrust of Internet of Things</a> <br>
+				<a href="https://hkust-gz.edu.cn/academics/four-hubs/information-hub/internet-of-things">Internet of Things Thrust</a> <br>
+        <a href="https://hkust-gz.edu.cn/academics/four-hubs/information-hub/artificial-intelligence">Artificial Intelligence Thrust</a> <br>
 				<a href="https://hkust-gz.edu.cn/">The Hong Kong University of Science and Technology (Guangzhou)</a><br><br><br>
 
 				Affiliate Assistant Professor <br><br>
