--- a/services.html
+++ b/services.html
@@ -122,6 +122,13 @@ a:active {
 				</li>
 			</ul>
 
+			<h2>Track chair</h2>
+			<ul>
+				<li>
+					<a href="http://www.icccs.org/index.html">The 8th International Conference on Computer and Communication Systems (ICCCS-23)</a>
+				</li>
+			</ul>
+
 			<h2>TPC member</h2>
 			<ul>
 				<li>
