ISIT paper accept

--- a/index.html
+++ b/index.html
@@ -193,6 +193,13 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
+			  <li>[Apr. 15, 2023] Two papers on secure federated learning are acceped to ISIT 2023!
+					<ul>
+					<li> Secure Embedding Aggregation for Federated Representation Learning. Congratulations, Jiaxiang!</li>
+					<li> Secure Gradient Aggregation for Wireless Multi-Server Federated Learning.</li>
+					</ul>
+					</li><br>
+
 				<li>[Feb. 25, 2023] Our paper "<a href="https://arxiv.org/pdf/2212.08236.pdf">Coded Distributed Computing for Hierarchical Multi-Task Learning</a>" is accepted to IEEE Information Theory Workshop (ITW) 2023!
 				</li><br>
 
