--- a/services.html
+++ b/services.html
@@ -132,6 +132,9 @@ a:active {
 			<h2>TPC member</h2>
 			<ul>
 				<li>
+					ICML 2023 Workshop on Federated Learning and Analytics in Practice (FL-ICML-23)
+				</li>
+				<li>
 					SIGIR 2023 1st Workshop on Federated Learning for Information Retrieval (FLIRT@SIGIR 2023)
 				</li>
 				<li>
