--- a/index.html
+++ b/index.html
@@ -194,12 +194,19 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
+				<li>[Apr. 25, 2023] Two papers on federated learning security and privacy are acceped to ICML 2023!
+						<ul>
+						<li> "<a href="https://arxiv.org/pdf/2304.13407.pdf">FedVS: Straggler-Resilient and Privacy-Preserving Vertical Federated Learning for Split Models</a>". Congratulations, Duanyi and Jin!</li>
+						<li> "<a href="https://arxiv.org/pdf/2304.12961.pdf">Chameleon: Adapting to Peer Images for Planting Durable Backdoors in Federated Learning</a>". Congratulations, Yanbo!</li>
+						</ul>
+				 </li><br>
+
 			  <li>[Apr. 15, 2023] Two papers on secure federated learning are acceped to ISIT 2023!
 					<ul>
 					<li> Secure Embedding Aggregation for Federated Representation Learning. Congratulations, Jiaxiang!</li>
-					<li> Secure Gradient Aggregation for Wireless Multi-Server Federated Learning.</li>
+					<li> Secure Gradient Aggregation for Wireless Multi-Server Federated Learning</li>
 					</ul>
-					</li><br>
+			  </li><br>
 
 				<li>[Feb. 25, 2023] Our paper "<a href="https://arxiv.org/pdf/2212.08236.pdf">Coded Distributed Computing for Hierarchical Multi-Task Learning</a>" is accepted to IEEE Information Theory Workshop (ITW) 2023!
 				</li><br>
