--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
-				<li>[Apr. 25, 2023] Two papers on federated learning security and privacy are acceped to ICML 2023!
+				<li>[Apr. 25, 2023] Two papers on federated learning security and privacy are accepted to ICML 2023!
 						<ul>
 						<li> "<a href="https://arxiv.org/pdf/2304.13407.pdf">FedVS: Straggler-Resilient and Privacy-Preserving Vertical Federated Learning for Split Models</a>". Congratulations, Duanyi and Jin!</li>
 						<li> "<a href="https://arxiv.org/pdf/2304.12961.pdf">Chameleon: Adapting to Peer Images for Planting Durable Backdoors in Federated Learning</a>". Congratulations, Yanbo!</li>
