--- a/index.html
+++ b/index.html
@@ -194,6 +194,9 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
+				<li>[April 29, 2023] Our paper "Communication-Efficient Coded Computing for Distributed Multi-Task Learning" is accepted to IEEE Transactions on Communications!
+				</li><br>
+
 				<li>[Apr. 25, 2023] Two papers on federated learning security and privacy are accepted to ICML 2023!
 						<ul>
 						<li> "<a href="https://arxiv.org/pdf/2304.13407.pdf">FedVS: Straggler-Resilient and Privacy-Preserving Vertical Federated Learning for Split Models</a>". Congratulations, Duanyi and Jin!</li>
