--- a/services.html
+++ b/services.html
@@ -181,13 +181,16 @@ a:active {
           IEEE Transactions on Information Forensics and Security
         </li>
 				<li>
+					IEEE Transactions on Dependable and Secure Computing
+				</li>
+				<li>
 					IEEE Transactions on Signal Processing
 				</li>
 				<li>
-					IEEE Transactions on Communications
-			  </li>
-				<li>
 					IEEE Journal on Selected Areas in Communications
+				</li>
+				<li>
+					IEEE Transactions on Communications
 			  </li>
         <li>
 					IEEE Transactions on Wireless Communications
