added paper links

--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@ a:active {
 
 				<li>[Apr. 25, 2023] Two papers on federated learning security and privacy are accepted to ICML 2023!
 						<ul>
-						<li> "<a href="https://arxiv.org/pdf/2304.13407.pdf">FedVS: Straggler-Resilient and Privacy-Preserving Vertical Federated Learning for Split Models</a>". Congratulations, Duanyi and Jin!</li>
-						<li> "<a href="https://arxiv.org/pdf/2304.12961.pdf">Chameleon: Adapting to Peer Images for Planting Durable Backdoors in Federated Learning</a>". Congratulations, Yanbo!</li>
+						<li> <a href="https://arxiv.org/pdf/2304.13407.pdf">FedVS: Straggler-Resilient and Privacy-Preserving Vertical Federated Learning for Split Models</a>. Congratulations, Duanyi and Jin!</li>
+						<li> <a href="https://arxiv.org/pdf/2304.12961.pdf">Chameleon: Adapting to Peer Images for Planting Durable Backdoors in Federated Learning</a>. Congratulations, Yanbo!</li>
 						</ul>
 				 </li><br>
 
 			  <li>[Apr. 15, 2023] Two papers on secure federated learning are acceped to ISIT 2023!
 					<ul>
-					<li> Secure Embedding Aggregation for Federated Representation Learning. Congratulations, Jiaxiang!</li>
+					<li> <a href="https://arxiv.org/pdf/2206.09097.pdf">Secure Embedding Aggregation for Federated Representation Learning</a>. Congratulations, Jiaxiang!</li>
 					<li> Secure Gradient Aggregation for Wireless Multi-Server Federated Learning</li>
 					</ul>
 			  </li><br>
