--- a/services.html
+++ b/services.html
@@ -132,6 +132,9 @@ a:active {
 			<h2>TPC member</h2>
 			<ul>
 				<li>
+					KDD 2023 Workshop on Federated Learning for Distributed Data Mining (FL4Data-Mining-23)
+				</li>
+				<li>
 					ICML 2023 Workshop on Federated Learning and Analytics in Practice (FL-ICML-23)
 				</li>
 				<li>
