--- a/services.html
+++ b/services.html
@@ -105,6 +105,12 @@ a:active {
 		<div style="padding: 10px">
       <h1>Academic services</h1>
 
+			<ul>
+				<li>
+					Secretary -  IEEE Information Theory Society Hongkong Chapter
+				</li>
+			</ul>
+
       <h2>Guest editor</h2>
 			<ul>
 				<li>
