updated team members

--- a/team.html
+++ b/team.html
@@ -104,6 +104,13 @@ a:active {
 		<div style="padding: 10px">
       <h2>Current Team Members</h2>
 
+			<h3>Post-doc Researchers</h3>
+			<ul>
+				<li>
+					<a href="mailto:jbzhu@ust.hk">Dr. Jinbao Zhu</a>
+				</li>
+			</ul>
+
       <h3>PhD Students</h3>
       <ul>
 				<li>
@@ -135,14 +142,36 @@ a:active {
         <li>
           <a href="mailto:jtangbe@connect.ust.hk">Jiaxiang Tang</a> (since 2021 fall)
         </li>
+
+				<li>
+          <a href="mailto:mliu007@connect.hkust-gz.edu.cn">Mingzhe Liu</a> (since 2022 fall)
+        </li>
+
+				<li>
+          <a href="mailto:ydai851@connect.hkust-gz.edu.cn">Yanbo Dai</a> (since 2022 fall)
+        </li>
+
+				<li>
+          <a href="mailto:jliu577@connect.hkust-gz.edu.cn">Jin Liu</a> (since 2022 fall)
+        </li>
+
+				<li>
+          <a href="mailto:czhu032@connect.hkust-gz.edu.cn">Chenqing Zhu</a> (since 2022 fall)
+        </li>
+
+				<li>
+          <a href="mailto:jlin373@connect.hkust-gz.edu.cn">Junru Lin</a> (since 2022 fall)
+        </li>
+
+				<li>
+					<a href="mailto:mchen899@connect.hkust-gz.edu.cn">Mengqi Chen</a> (since 2022 fall)
+				</li>
+
+				<li>
+					<a href="mailto:lluo476@connect.hkust-gz.edu.cn">Lan Luo</a> (since 2022 fall)
+				</li>
       </ul>
 
-			<!-- <h3>Post-doc Fellows</h3>
-			<ul>
-				<li>
-					<a href="mailto:jbzhu@ust.hk">Dr. Jinbao Zhu</a>
-				</li>
-			</ul> -->
 
       <!-- <h3>Research Assistants</h3>
       <ul>
