--- a/index.html
+++ b/index.html
@@ -194,6 +194,9 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
+				<li>[July 3, 2023] Congratulations on Jiaxiang Tang's sucessfully defending his MPhil thesis.
+				</li><br>
+
 				<li>[April 29, 2023] Our paper "Communication-Efficient Coded Computing for Distributed Multi-Task Learning" is accepted to IEEE Transactions on Communications!
 				</li><br>
 
