--- a/services.html
+++ b/services.html
@@ -168,7 +168,7 @@ a:active {
           AAAI International Workshop on Trustable, Verifiable and Auditable Federated Learning (FL-AAAI-22)
 				</li>
 				<li>
-					AAAI Conference on Artificial Intelligence (22)
+					AAAI Conference on Artificial Intelligence (22, 24)
 				</li>
 				<li>
 					ICML International Workshop on Federated Learning for User Privacy and Data Confidentiality (FL-ICML-21)
