--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
+				<li>[Aug. 4, 2023] Our paper "Multi-Server Secure Aggregation with Unreliable Communication Links" is accepted to 2023 IEEE Global Communications Conference: Communication & Information Systems Security.
+
 				<li>[July 22, 2023] I delivered an invited talk "LightSecAgg: A Lightweight and Versatile Design for Secure Aggregation in Federated Learning" at Eighth SYSU Information and Coding Theory Forum (第八届信息论与编码中大论坛).
 				</li><br>
 
