Update website for SEU

--- a/index_hkust.html
+++ b/index_hkust.html
@@ -118,7 +118,9 @@ a:active {
 <!--                       <a href="http://trifectachain.com" target="_blank"><span style="font-size: 120%;">Trifecta Blockchain Inc.</span></a><br>
                         <br>
                         -->
-							songzeli8824 [at] outlook [dot] com<br><br>
+							songzeli8824 [at] gmail [dot] com<br><br>
+
+							songzeli [at] ust [dot] hk<br><br>
 
 							<a href="https://scholar.google.com/citations?user=zX8LAXkAAAAJ&hl=en&authuser=1">Google Scholar</a><br>
 							<a href="https://github.com/songzLi">Github</a>
@@ -128,15 +130,19 @@ a:active {
 				</table>
 			</td>
 
-			<td width="600" valign="top" style="font-size: 100%; text-align: left; padding-top: 100px;">
-				<strong style="font-size: 160%";> Songze Li</strong><br><br><br>
+			<td width="600" valign="top" style="font-size: 100%; text-align: left; padding-top: 50px;">
+				<strong style="font-size: 160%";> Songze Li</strong><br><br><br><br>
 
-				<p style="font-size: 120%";>Professor</p> <br>
+				Assistant Professor <br><br>
+				<a href="https://hkust-gz.edu.cn/academics/four-hubs/information-hub/internet-of-things">Internet of Things Thrust</a> <br>
+        <a href="https://hkust-gz.edu.cn/academics/four-hubs/information-hub/artificial-intelligence">Artificial Intelligence Thrust</a> <br>
+				<a href="https://hkust-gz.edu.cn/">The Hong Kong University of Science and Technology (Guangzhou)</a><br><br><br>
 
-				<a href="https://cyber.seu.edu.cn/">School of Cyber Science and Engineering</a> <br><br>
-      
-				<a href="https://www.seu.edu.cn/">Southeast University</a><br><br><br>
-
+				Affiliate Assistant Professor <br><br>
+				<a href="https://www.cse.ust.hk">Department of Computer Science and Engineering</a> <br>
+				<!-- Visiting Assistant Professor <br>
+				<a href="https://ece.hkust.edu.hk/">Department of Electronic and Computer Engineering</a> <br><br> -->
+				<a href="https://hkust.edu.hk/">The Hong Kong University of Science and Technology</a>
 			</td>
 		</tr>
 	    </table>
@@ -150,10 +156,10 @@ a:active {
 		<strong>
 			<!-- <p style="font-size:18px; color:red">I am joining the Hong Kong University of Science and Technology as an assistant professor starting Dec. 2020. </p> -->
 
-		   <p style="font-size:18px; color:red">Positions are open for <em style="color:black">strongly motivated</em> undergraduate and postgraduate students (MPhil and PhD), post-docs, research assistants, and visiting interns, on research topics including AI security and privacy, federated learning, secure multiparty computation (e.g., threshold cryptosystems and secure ML protocols), and blockchain security and scalability (e.g., sharding and rollups).
+		   <p style="font-size:18px; color:red">Positions are open for <em style="color:black">strongly motivated</em> postgraduate students (MPhil and PhD), post-docs, research assistants, and visiting interns, on research topics including federated learning algorithms, security, and privacy, secure multiparty computation (e.g., threshold cryptosystems and secure ML protocols), and blockchain security and scalability (e.g., sharding and rollups).
 
 			 <p style="font-size:18px; color:red">
-			 Interested applicants please email me with your CV, transcript, and any related publications at songzeli8824 [at] outlook [dot] com. Past experience on publishing (as first author) on top machine learning, computer/communciation security, cryptography, and information theory venues is a big plus! </p>
+			 Interested applicants please email me with your CV, transcript, and any related publications at songzeli [at] ust [dot] hk. Past experience on publishing (as first author) on top machine learning, computer/communciation security, cryptography, and information theory venues is a big plus! </p>
 		</strong>
 	</td>
 </tr>
