--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@ a:active {
 <!--                       <a href="http://trifectachain.com" target="_blank"><span style="font-size: 120%;">Trifecta Blockchain Inc.</span></a><br>
                         <br>
                         -->
+							songzeli8824 [at] seu [dot] edu [dot] cn<br><br>
+
 							songzeli8824 [at] outlook [dot] com<br><br>
 
 							<a href="https://scholar.google.com/citations?user=zX8LAXkAAAAJ&hl=en&authuser=1">Google Scholar</a><br>
