--- a/team_HKUST.html
+++ b/team_HKUST.html
@@ -104,14 +104,13 @@ a:active {
 		<div style="padding: 10px">
       <h2>Current Team Members</h2>
 
-			<!-- <h3>Post-doc Researchers</h3>
+			<h3>Post-doc Researchers</h3>
 			<ul>
 				<li>
 					<a href="mailto:jbzhu@ust.hk">Dr. Jinbao Zhu</a>
 				</li>
-			</ul> -->
+			</ul>
 
-	  <h3>HKUST and HKUST(GZ)</h3>
       <h3>PhD Students</h3>
       <ul>
 				<li>
@@ -167,6 +166,10 @@ a:active {
 				<li>
 					<a href="mailto:lluo476@connect.hkust-gz.edu.cn">Lan Luo</a> (since 2022 fall)
 				</li>
+
+				<li>
+					<a href="mailto:jtangbe@connect.ust.hk">Jiaxiang Tang</a> (since 2021 fall)
+				</li>
       </ul>
 
 
@@ -179,18 +182,6 @@ a:active {
 
       <hr>
 			<h2>Former Team Members</h2>
-
-			<h3>Post-doc Researchers</h3>
-			<ul>
-				<li>
-					<a href="mailto:jbzhu@ust.hk">Dr. Jinbao Zhu</a>, 2021-2023.
-				</li>
-			</ul>
-
-			<h3>MPhil Students</h3>
-			<li>
-				<a href="mailto:jtangbe@connect.ust.hk">Jiaxiang Tang</a>, 2021-2023, now now pursing PhD at University of Minnesota Twin Cities.
-			</li>
 
 			<h3>Visiting Students</h3>
 			<ul>
