--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ a:active {
 <!--                       <a href="http://trifectachain.com" target="_blank"><span style="font-size: 120%;">Trifecta Blockchain Inc.</span></a><br>
                         <br>
                         -->
-							songzeli8824 [at] seu [dot] edu [dot] cn<br><br>
+							songzeli [at] seu [dot] edu [dot] cn<br><br>
 
 							songzeli8824 [at] outlook [dot] com<br><br>
 
