--- a/services.html
+++ b/services.html
@@ -138,6 +138,9 @@ a:active {
 			<h2>TPC member</h2>
 			<ul>
 				<li>
+					NeurIPS 2023 Workshop on Federated Learning in the Age of Foundation Models (FL@FM-NeurIPS 2023)
+				</li>
+				<li>
 					KDD 2023 Workshop on Federated Learning for Distributed Data Mining (FL4Data-Mining-23)
 				</li>
 				<li>
