--- a/index.html
+++ b/index.html
@@ -190,6 +190,10 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
+				<li>[Oct. 23, 2023] Our paper "Network Modeling With Active Few-shot Learning" is accepted to 2nd Graph Neural Networking Workshop at of ACM CoNEXT 2023.
+				</li><br>	
+
+
 				<li>[Aug. 4, 2023] Our paper "Multi-Server Secure Aggregation with Unreliable Communication Links" is accepted to 2023 IEEE Global Communications Conference: Communication & Information Systems Security.
 				</li><br>	
 
