update hiring info

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ a:active {
 		<strong>
 			<!-- <p style="font-size:18px; color:red">I am joining the Hong Kong University of Science and Technology as an assistant professor starting Dec. 2020. </p> -->
 
-		   <p style="font-size:18px; color:red">Positions are open for <em style="color:black">strongly motivated</em> undergraduate and postgraduate students (Master and PhD), post-docs, research assistants, and visiting interns, on research topics including AI security and privacy, federated learning, secure multiparty computation (e.g., threshold cryptosystems and secure ML protocols), and blockchain security and scalability (e.g., sharding and rollups).
+		   <p style="font-size:18px; color:red">Positions are open for <em style="color:black">strongly motivated</em> undergraduate and postgraduate students (Master and PhD), post-docs, research assistants, and visiting interns, on research topics including AI security and privacy, federated learning, big model security, secure multiparty computation (e.g., secure ML protocols), and blockchain security and scalability (e.g., sharding and rollups).
 
 			 <p style="font-size:18px; color:red">
 			 Interested applicants please email me with your CV, transcript, and any related publications at songzeli [at] seu [dot] edu [dot] cn, or songzeli8824 [at] outlook [dot] com. Past experience on publishing (as first author) on top machine learning, computer/communciation security, cryptography, and information theory venues is a big plus! </p>
