Update paper title

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ a:active {
 				<li>[Nov. 9, 2023] Our paper "<a href="https://arxiv.org/abs/2211.04132">Stochastic Coded Federated Learning: Theoretical Analysis and Incentive Mechanism Design</a>" is accepted to IEEE Transactions on Wireless Communications.
 				</li><br>		
 
-				<li>[Oct. 23, 2023] Our paper "Network Modeling With Active Few-shot Learning" is accepted to 2nd Graph Neural Networking Workshop at of ACM CoNEXT 2023.
+				<li>[Oct. 23, 2023] Our paper "Active Few-shot Learning For RouteNet-Fermi" is accepted to 2nd Graph Neural Networking Workshop at of ACM CoNEXT 2023.
 				</li><br>	
 
 
