--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
+				<li>[Jan. 16, 2024] Our paper "Constructing Adversarial Examples for Vertical Federated Learning: Optimal Client Corruption through Multi-Armed Bandit" is accepted to ICLR 2024. Congratulations, Duanyi!
+				</li><br>	
+
 				<li>[Nov. 9, 2023] Our paper "<a href="https://arxiv.org/abs/2211.04132">Stochastic Coded Federated Learning: Theoretical Analysis and Incentive Mechanism Design</a>" is accepted to IEEE Transactions on Wireless Communications.
 				</li><br>		
 
@@ -206,7 +209,7 @@ a:active {
 				<li>[July 3, 2023] Congratulations to Jiaxiang Tang's on sucessfully defending his MPhil thesis.
 				</li><br>
 
-				<li>[April 29, 2023] Our paper "Communication-Efficient Coded Computing for Distributed Multi-Task Learning" is accepted to IEEE Transactions on Communications!
+				<li>[April 29, 2023] Our paper "Communication-Efficient Coded Computing for Distributed Multi-Task Learning" is accepted to IEEE Transactions on Communications.
 				</li><br>
 
 				<li>[Apr. 25, 2023] Two papers on federated learning security and privacy are accepted to ICML 2023!
