ICLR private PC

--- a/services.html
+++ b/services.html
@@ -138,6 +138,9 @@ a:active {
 			<h2>TPC member</h2>
 			<ul>
 				<li>
+					ICLR 2024 Workshop on Privacy Regulation and Protection in Machine Learning(PRIVATE ML@ICLR 2024)
+				</li>
+				<li>
 					NeurIPS 2023 Workshop on Federated Learning in the Age of Foundation Models (FL@FM-NeurIPS 2023)
 				</li>
 				<li>
