--- a/team.html
+++ b/team.html
@@ -190,7 +190,7 @@ a:active {
 			<h3>MPhil Students</h3>
 			<ul>
 			<li>
-				<a href="mailto:jtangbe@connect.ust.hk">Jiaxiang Tang</a>, 2021-2023, now now pursing PhD at University of Minnesota Twin Cities.
+				<a href="mailto:jtangbe@connect.ust.hk">Jiaxiang Tang</a>, 2021-2023, now pursing PhD at University of Minnesota Twin Cities.
 			</li>
 			</ul>
 
