--- a/services.html
+++ b/services.html
@@ -137,6 +137,9 @@ a:active {
 			<h2>TPC member</h2>
 			<ul>
 				<li>
+					IJCAI 2024 International Workshop on Federated Learning in the Age of Foundation Models (FL@FM-IJCAI 24)
+				</li>
+				<li>
 					IEEE International Conference on Distributed Computing Systems (24)
 				</li>
 				<li>
