Usenix Security 2024 Accept

--- a/index.html
+++ b/index.html
@@ -190,7 +190,10 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
-				<li>[Jan. 16, 2024] Our paper "Constructing Adversarial Examples for Vertical Federated Learning: Optimal Client Corruption through Multi-Armed Bandit" is accepted to ICLR 2024. Congratulations, Duanyi!
+				<li>[May 31, 2024] Our paper "BackdoorIndicator: Leveraging OOD Data for Proactive Backdoor Detection in Federated Learning" is accepted to USENIX Security 2024. Congratulations to Yanbo!
+				</li><br>		
+
+				<li>[Jan. 16, 2024] Our paper "Constructing Adversarial Examples for Vertical Federated Learning: Optimal Client Corruption through Multi-Armed Bandit" is accepted to ICLR 2024. Congratulations to Duanyi!
 				</li><br>	
 
 				<li>[Nov. 9, 2023] Our paper "<a href="https://arxiv.org/abs/2211.04132">Stochastic Coded Federated Learning: Theoretical Analysis and Incentive Mechanism Design</a>" is accepted to IEEE Transactions on Wireless Communications.
